[tool.poetry]
name = "gocp"
version = "0.1.0"
description = ""
authors = ["tomowarkar"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mkdocs = "1.1.2"
mkdocs-material = "^6.1.7"
mkdocs-macros-plugin = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
